--- a/src/components/layout/oldlayout.css
+++ b/src/components/layout/oldlayout.css
@@ -1,3 +1,30 @@
+:root {
+	--border-radius: 4px;
+	--color-text: #333;
+	--color-primary: #7026b9;
+	--color-code-bg: #fff4db;
+	--color-code: #8a6534;
+	--font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
+		sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+	--font-mono: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
+		'Courier New', monospace;
+/*	--font-lg: 18px;
+	--font-md: 16px;
+	--font-sm: 14px;
+	--font-sx: 12px;*/
+	--line-height-loose: 1.75;
+	--line-height-normal: 1.5;
+	--line-height-dense: 1.1;
+	--space-1: 4px;
+	--space-2: 8px;
+	--space-3: 16px;
+	--space-4: 24px;
+	--space-5: 32px;
+/*	--space-6: 64px;
+	--size-content: 54rem;
+	--size-gutter: var(--space-5);
+	--size-gap: var(--space-6);*/
+}
 html {
 	-webkit-text-size-adjust: 100%;
 	box-sizing: border-box;
@@ -6,7 +33,6 @@ html {
 	line-height: var(--line-height-normal);
 	overflow-y: scroll;
 }
-
 body {
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
@@ -17,29 +43,22 @@ body {
 	margin: 0;
 	word-wrap: break-word;
 }
-
-h1 {
-	margin: 0;
-	margin-bottom: 3rem;
-	padding: 0;
-	line-height: var(--line-height-dense);
-	letter-spacing: -0.01em;
+/*a {
+	background-color: transparent;
+	color: var(--color-primary);
+	text-decoration: none;
+	font-weight: 500;
+	text-decoration: underline;
+	text-decoration-thickness: 1.5px;
+	text-underline-offset: 2px;
 }
-
-
-img {
-	border-style: none;
-	max-width: 100%;
+*/
+/*a:active,
+a:hover {
+	outline-width: 0;
+	text-decoration: none;
 }
-code,
-kbd,
-pre,
-samp {
-	font-family: var(--font-mono);
-	font-size: 1em;
-	line-height: inherit;
-}
-
+*/
 abbr[title] {
 	border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
 	cursor: help;
@@ -50,7 +69,6 @@ strong {
 	font-weight: inherit;
 	font-weight: bolder;
 }
-
 dfn {
 	font-style: italic;
 }
