--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -26,7 +26,6 @@ h1 {
 	letter-spacing: -0.01em;
 }
 
-
 img {
 	border-style: none;
 	max-width: 100%;
@@ -104,8 +103,7 @@ fieldset,
 ul,
 ol,
 dl,
-dd
- {
+dd {
 	margin: 0;
 	padding: 0;
 	margin-bottom: var(--space-4);
